Add Tolerations and NodeSelector to JobSpec

--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -796,6 +796,10 @@ spec:
                       type: string
                     noLoggingToStdout:
                       type: boolean
+                    nodeSelector:
+                      additionalProperties:
+                        type: string
+                      type: object
                     parallelism:
                       format: int32
                       type: integer
@@ -905,6 +909,22 @@ spec:
                       type: object
                     takeSavepointOnUpdate:
                       type: boolean
+                    tolerations:
+                      items:
+                        properties:
+                          effect:
+                            type: string
+                          key:
+                            type: string
+                          operator:
+                            type: string
+                          tolerationSeconds:
+                            format: int64
+                            type: integer
+                          value:
+                            type: string
+                        type: object
+                      type: array
                     volumeMounts:
                       items:
                         properties:
