Fix Helm chart Values path

--- a/helm-chart/flink-operator/templates/flink-operator.yaml
+++ b/helm-chart/flink-operator/templates/flink-operator.yaml
@@ -75,11 +75,11 @@ spec:
           protocol: TCP
         resources:
           requests:
-            cpu: {{ .Values.requests.cpu }}
-            memory: {{ .Values.requests.memory }}
+            cpu: {{ .Values.resources.requests.cpu }}
+            memory: {{ .Values.resources.requests.memory }}
           limits:
-            cpu: {{ .Values.limits.cpu }}
-            memory: {{ .Values.limits.memory }}
+            cpu: {{ .Values.resources.limits.cpu }}
+            memory: {{ .Values.resources.limits.memory }}
         securityContext:
           allowPrivilegeEscalation: false
         volumeMounts:
