Helm charts: Add pdb for the operator

--- a/helm-chart/flink-operator/values.yaml
+++ b/helm-chart/flink-operator/values.yaml
@@ -51,3 +51,8 @@ podAnnotations: {}
 
 nodeSelector: {}
 tolerations: {}
+
+podDisruptionBudget:
+  enabled: false
+  minAvailable: 90%
+  maxUnavailable: 1
