Update Flink custom docker images structure

--- a/images/flink/Makefile
+++ b/images/flink/Makefile
@@ -4,7 +4,6 @@ all: build
 
 # Build the docker image
 build:
-	cd docker
 ifeq ($(PYTHON_VERSION),)
 	docker build . \
 		-t ${IMAGE_TAG} \
@@ -14,7 +13,7 @@ ifeq ($(PYTHON_VERSION),)
 		--build-arg GCS_CONNECTOR_VERSION=${GCS_CONNECTOR_VERSION}
 else
 	docker build . \
-		-f Dockerfile.python \
+		-f python.Dockerfile \
 		-t ${IMAGE_TAG} \
 		--build-arg FLINK_VERSION=${FLINK_VERSION} \
 		--build-arg SCALA_VERSION=${SCALA_VERSION} \
