--- a/helm-chart/flink-operator/templates/flink-operator.yaml
+++ b/helm-chart/flink-operator/templates/flink-operator.yaml
@@ -48,6 +48,8 @@ spec:
       labels:
         app: flink-operator
         control-plane: controller-manager
+      annotations:
+        kubectl.kubernetes.io/default-container: flink-operator
     spec:
       containers:
       - name: kube-rbac-proxy
