--- a/helm-chart/flink-operator/values.yaml
+++ b/helm-chart/flink-operator/values.yaml
@@ -22,7 +22,7 @@ serviceAccount:
 rbac:
   create: true
 
-# The defination of the operator image
+# The definition of the operator image
 operatorImage:
   name: ghcr.io/spotify/flink-operator:latest
   pullPolicy: IfNotPresent
