Add ability to add annotations to JobManager service

--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -1647,6 +1647,10 @@ spec:
                   type: object
                 jobManager:
                   properties:
+                    ServiceAnnotations:
+                      additionalProperties:
+                        type: string
+                      type: object
                     accessScope:
                       type: string
                     extraPorts:
