Add ability to add labels to JobManager service

--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -1651,6 +1651,10 @@ spec:
                       additionalProperties:
                         type: string
                       type: object
+                    ServiceLabels:
+                      additionalProperties:
+                        type: string
+                      type: object
                     accessScope:
                       type: string
                     extraPorts:
