Add ability to add annotations and labels to JobManager service (#320)

--- a/helm-chart/flink-operator/templates/flink-cluster-crd.yaml
+++ b/helm-chart/flink-operator/templates/flink-cluster-crd.yaml
@@ -1659,6 +1659,14 @@ spec:
                   properties:
                     accessScope:
                       type: string
+                    ServiceAnnotations:
+                      additionalProperties:
+                        type: string
+                      type: object
+                    ServiceLabels:
+                      additionalProperties:
+                        type: string
+                      type: object
                     extraPorts:
                       items:
                         properties:
