Register PodDisruptionBudget and add rbac rule (#358)
* Register PodDisruptionBudget and add rbac rule

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -114,6 +114,16 @@ rules:
       - update
       - watch
   - apiGroups:
+      - "policy"
+    resources:
+      - poddisruptionbudgets
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - watch
+  - apiGroups:
       - ""
     resources:
       - pods
