Update Helm rbac rules

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -124,6 +124,12 @@ rules:
       - list
       - watch
   - apiGroups:
+      - "policy"
+    resources:
+      - poddisruptionbudgets/status
+    verbs:
+      - get
+  - apiGroups:
       - ""
     resources:
       - pods
