Add classpath parameter support

--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -188,6 +188,10 @@ spec:
                       type: boolean
                     className:
                       type: string
+                    classPath:
+                      items:
+                        type: string
+                      type: array
                     cleanupPolicy:
                       properties:
                         afterJobCancelled:
