Add default storageType to test specs

--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -5324,6 +5324,8 @@ spec:
                           - name
                         type: object
                       type: array
+                    storageType:
+                      type: string
                     tolerations:
                       items:
                         properties:
