Add TaskManagerDeployment component to cluster status

--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -6327,6 +6327,16 @@ spec:
                         - name
                         - state
                       type: object
+                    taskManagerDeployment:
+                      properties:
+                        name:
+                          type: string
+                        state:
+                          type: string
+                      required:
+                        - name
+                        - state
+                      type: object
                     taskManagerStatefulSet:
                       properties:
                         name:
@@ -6341,7 +6351,6 @@ spec:
                     - configMap
                     - jobManagerService
                     - jobManagerStatefulSet
-                    - taskManagerStatefulSet
                   type: object
                 control:
                   properties:
