Add hostAliases support for all pod templates (#398)

--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -899,6 +899,17 @@ spec:
                             type: string
                         type: object
                       type: array
+                    hostAliases:
+                      items:
+                        properties:
+                          ip:
+                            type: string
+                          hostnames:
+                            items:
+                              type: string
+                            type: array
+                        type: object
+                      type: array
                     volumeMounts:
                       items:
                         properties:
@@ -3053,6 +3064,17 @@ spec:
                             type: integer
                           value:
                             type: string
+                        type: object
+                      type: array
+                    hostAliases:
+                      items:
+                        properties:
+                          ip:
+                            type: string
+                          hostnames:
+                            items:
+                              type: string
+                            type: array
                         type: object
                       type: array
                     volumeClaimTemplates:
@@ -5340,6 +5362,17 @@ spec:
                             type: integer
                           value:
                             type: string
+                        type: object
+                      type: array
+                    hostAliases:
+                      items:
+                        properties:
+                          ip:
+                            type: string
+                          hostnames:
+                            items:
+                              type: string
+                            type: array
                         type: object
                       type: array
                     volumeClaimTemplates:
