helm: Update CRDs to align with latest commits

--- a/helm-chart/flink-operator/templates/flink-cluster-crd.yaml
+++ b/helm-chart/flink-operator/templates/flink-cluster-crd.yaml
@@ -4080,6 +4080,8 @@ spec:
                   type: string
                 taskManager:
                   properties:
+                    deploymentType:
+                       type: string
                     extraPorts:
                       items:
                         properties:
@@ -6574,6 +6576,16 @@ spec:
                         - name
                         - state
                       type: object
+                    taskManagerDeployment:
+                      properties:
+                        name:
+                          type: string
+                        state:
+                          type: string
+                      required:
+                        - name
+                        - state
+                      type: object
                     taskManagerStatefulSet:
                       properties:
                         name:
@@ -6588,7 +6600,6 @@ spec:
                     - configMap
                     - jobManagerService
                     - jobManagerStatefulSet
-                    - taskManagerStatefulSet
                   type: object
                 control:
                   properties:
