fix rbac permissions

--- a/helm-chart/flink-operator/templates/rbac.yaml
+++ b/helm-chart/flink-operator/templates/rbac.yaml
@@ -210,6 +210,18 @@ rules:
     verbs:
       - get
   - apiGroups:
+      - ""
+    resources:
+      - secrets
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
+  - apiGroups:
       - networking.k8s.io
     resources:
       - ingresses
